fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -163,7 +163,7 @@ body {
     justify-content: flex-start;
     align-items: center;
 	padding: 1em 2em;
-	margin-top: 12em;
+	margin-top: 8em;
 	width: 100%;
 	height: 100%;
 }
@@ -241,7 +241,7 @@ body {
 }
 
 .about-more-info {
-	width: 78vw;
+	width: 70vw;
 }
 
 .about-subtitle {
@@ -342,8 +342,7 @@ body {
 .travel-pics, .food-pics, .cat-pics {
 	display: grid;
 	grid-template-areas: 
-			"a b c d e f"
-			"g h i j k l";
+			"a b c d e f";
 	transition: transform 1s ease-in-out;
 }
 
@@ -381,7 +380,7 @@ body {
 	}
 }
 
-@media (min-width: 1700px) {
+@media (min-width: 1400px) {
 	.gallery-section {
 		grid-template-columns: repeat(3, 1fr);
 		column-gap: 2em;
